--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "jsonwebtoken": "8.5.1",
     "bcrypt": "5.0.1",
+    "cores": "^0.8.0",
     "express": "4.17.1",
     "nodemon": "2.0.7",
     "sqlite": "4.0.19",
